--- a/popup.html
+++ b/popup.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <base target="_blank">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <title>Random Reddit</title>
 </head>
-<body>
-    <p id="PostElement" style="justify-content: center;"> Getting You Some Shower Thoughts</p>
-    <!-- <a target="_blank" id="LinkElement">h</a> -->
-    <!-- <p id="ContentElement">content will appear here</p> -->
 
+<body class="container center-align light-blue darken-2 white-text" style=" width: 300px;
+height: 200px;">
+    <div class="row">
+        <p id="PostElement" class="col s12 flow-text"> Getting You Some Shower Thoughts 😊
+        </p>
+    </div>
+  
     <script src="script.js"></script>
 </body>
+
 </html>
